--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@
      
     --color-base-white: hsl(0, 0%, 100%); 
 
-    ----Platform-Aliases-Shape-principal: #202024; 
+    ----Platform-Aliases-Shape-principal: hsl(240, 6%, 13%); 
 
-    --Platform-Aliases-Background: #121214; 
+    --Platform-Aliases-Background: hsl(240, 5%, 7%); 
 
-    --Brand-Colors-Explorer-dark: #065E7C; 
+    --Brand-Colors-Explorer-dark: hsl(195, 91%, 25%); 
 
     --brand-color-light: hsl(195, 46%, 40%); 
 
-    --input-bottom: #ffffff33; 
+    --input-bottom: hsla(0, 0%, 100%, 0.2); 
 
     max-width: 100%vh;
 }
@@ -33,7 +33,7 @@ header {
     height: 7.2rem;
     padding: 2.8rem;
     align-items: center;
-    gap: 20px;
+    gap: 2.5rem;
 
     background: var(--Brand-Colors-Explorer-dark);
 }
@@ -46,7 +46,7 @@ header {
     background: #F4FCFF; 
 
 
-    gap: 25px;
+    gap: 2.5rem     ;
 } 
 
 .input-wrapper {
@@ -104,11 +104,11 @@ header {
     width: 43.0rem;
     height: 21.9rem;
 
-    border-radius: 5px;
+    border-radius: .5rem;
 }
 main h1 { 
     color: var(--Platform-Aliases-Shape-principal);
-    font-family: Mulish;
+    font-family: "Mulish";
     font-size: 2.4rem;
     font-style: normal;
     font-weight: 700;
@@ -116,7 +116,7 @@ main h1 {
 } 
 main h1{ 
     padding: 2.2rem; 
-    padding-bottom: 0px;
+    padding-bottom: 0;
 }
  
 
@@ -143,10 +143,6 @@ main p {
 
     gap: 1.2rem; 
 } 
-
-/*.buttons button + button {
-    margin-left: 1.2rem;
-}*/
 
 .icon-up { 
     width: 1.6rem;
@@ -208,7 +204,7 @@ fieldset .tags {
     
     padding-top: 3.1rem; 
 
-    gap: 16px; 
+    gap: 1.6rem; 
 }
 
 details h3 { 
@@ -251,7 +247,7 @@ footer p {
     font-weight: 600; 
     line-height: normal; 
 
-    opacity: .7; 
+    opacity: .8; 
 }  
 
 @media (min-width: 1024px) {
@@ -264,7 +260,7 @@ footer p {
         justify-content: center; 
     } 
 
-    .input-wrapper { width: 1137px;   }
+    .input-wrapper { width: 113.7rem;   }
 
     .gato {
         width: 80.2rem;
@@ -301,7 +297,7 @@ footer p {
 
     .structure {
 
-        width: 11.37rem;
+        width: 113.0rem;
         height: 90.0rem;
         
         display: grid;
@@ -319,15 +315,13 @@ footer p {
     }
 
     .cabeçalho {
-        width: 803px;
-        padding-top: 32px;
+        width: 80.3rem;
+        padding-top: 3.2rem;
         
         display: flex;
-        place-items: center;
         justify-content: space-between;
         gap: 0.8rem;
-       
-        
+
     }
 
     .cabeçalho h1 {
@@ -350,7 +344,7 @@ footer p {
     .details h3 {
         color: var(--Platform-Aliases-Shape-principal, #202024);
         
-        font-family: Mulish;
+        font-family: "Mulish";
         font-size: 1.8rem;
         font-style: both;
         font-weight: 700;
@@ -360,7 +354,7 @@ footer p {
     .tags span {
         color: var(--Platform-Aliases-Background);
 
-        width: 217px;
+        width: 21.7rem;
 
         font-family: "Mulish", "sans-serif";
         font-size: 1.4rem;
@@ -370,7 +364,7 @@ footer p {
     }
 
     fieldset {
-        margin-top: 5px;
+        margin-top: .5rem;
         padding-top: 0;
 
         grid-row: 1/2;
@@ -385,8 +379,6 @@ footer p {
         align-items: center;
         gap: 1.0rem;
         flex-shrink: 0; 
-
-        margin-top: 10.rem;
     }
 
    
