Mudança na margen de structure

--- a/style.css
+++ b/style.css
@@ -306,7 +306,7 @@ footer p {
         gap: 3rem 3rem;
         
 
-        margin: 4.4rem 10.9rem ;
+        margin: 4.4rem 90.rem ;
 
         display: flex;
         align-items: flex-start;
