--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ footer p {
 
     .structure {
 
-        width: 113.0rem;
+        width: 110.0rem;
         height: 90.0rem;
         
         display: grid;
@@ -306,11 +306,11 @@ footer p {
         gap: 3rem 3rem;
         
 
-        margin: 4.4rem 90.rem ;
+        margin: 4.0rem 8.0rem 1.9rem ;
 
-        display: flex;
+        display: inline-flex;
         align-items: flex-start;
-        gap: .2rem;
+        
 
     }
 
