--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ footer p {
 
     .structure {
 
-        width: 112.0rem;
+        width: 113.0rem;
         height: 90.0rem;
         
         display: grid;
@@ -308,7 +308,7 @@ footer p {
 
         margin: 4.0rem 10.0rem 1.9rem ;
 
-        display: inline-flex;
+        display: flex;
         align-items: flex-start;
         
 
