--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 
     --input-bottom: hsla(0, 0%, 100%, 0.2); 
 
-    max-width: 100%vh;
+    min-width: 100%vh;
 }
 
 html, body, main, input, fieldset { font-family: "Mulish", sans-serif;} 
@@ -229,6 +229,7 @@ footer {
     padding: 1.6rem; 
 
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 
